--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       <button class="mode-btn" data-mode="five-times">5回で変更</button>
       <button class="mode-btn" data-mode="random">ランダム</button>
     </div>
+    <input type="range" id="volume-slider" min="0" max="1" step="0.01" value="0.5">
   </div>
   <script src="main.js"></script>
 </body>
